[gd_scene load_steps=8 format=4 uid="uid://bklojjl4fi16f"]

[ext_resource type="Script" uid="uid://i6kj2sugf7xp" path="res://main_menu/main_menu.gd" id="1_d3a7t"]
[ext_resource type="SpriteFrames" uid="uid://ighhlcj6nf8q" path="res://player/player.tres" id="3_3shxk"]
[ext_resource type="PackedScene" uid="uid://dlk011o6ucvn8" path="res://gui/mute_button.tscn" id="3_vu5tu"]
[ext_resource type="TileSet" uid="uid://dtatic1opbqyt" path="res://levels/level_tileset.tres" id="4_3f7m4"]
[ext_resource type="Script" uid="uid://csuuuf2o47g1x" path="res://main_menu/tile_map_layer.gd" id="5_6tl50"]
[ext_resource type="Texture2D" uid="uid://c5srkv3xqx6bp" path="res://gui/button UI.png" id="6_6tl50"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t6bnd"]
atlas = ExtResource("6_6tl50")
region = Rect2(64, 16, 16, 16)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3a7t")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(0, 235)
scale = Vector2(9, 9)
tile_map_data = PackedByteArray("AAAAAP3/AAAAAAkAAAAAAP7/AAAAAAoAAAAAAP//AAAAAAsAAAAAAAAAAAAAAAwAAAAAAAEAAAAAAA0AAAAAAAIAAAAAAA4AAAAAAAMAAAAAAA8AAAABAP3/AAAAAAkAAAABAP7/AAAAAAoAAAABAP//AAAAAAsAAAABAAAAAAAAAAwAAAABAAEAAAAAAA0AAAABAAIAAAAAAA4AAAABAAMAAAAAAA8AAAACAP3/AAAAAAkAAAACAP7/AAAAAAoAAAACAP//AAAAAAsAAAACAAAAAAAAAAwAAAACAAEAAAAAAA0AAAACAAIAAAAAAA4AAAACAAMAAAAAAA8AAAADAP3/AAAAAAkAAAADAP7/AAAAAAoAAAADAP//AAAAAAsAAAADAAAAAAAAAAwAAAADAAEAAAAAAA0AAAADAAIAAAAAAA4AAAADAAMAAAAAAA8AAAAEAP3/AAAAAAkAAAAEAP7/AAAAAAoAAAAEAP//AAAAAAsAAAAEAAAAAAAAAAwAAAAEAAEAAAAAAA0AAAAEAAIAAAAAAA4AAAAEAAMAAAAAAA8AAAAFAP3/AAAAAAkAAAAFAP7/AAAAAAoAAAAFAP//AAAAAAsAAAAFAAAAAAAAAAwAAAAFAAEAAAAAAA0AAAAFAAIAAAAAAA4AAAAFAAMAAAAAAA8AAAAGAP3/AAAAAAkAAAAGAP7/AAAAAAoAAAAGAP//AAAAAAsAAAAGAAAAAAAAAAwAAAAGAAEAAAAAAA0AAAAGAAIAAAAAAA4AAAAGAAMAAAAAAA8AAAAHAP3/AAAAAAkAAAAHAP7/AAAAAAoAAAAHAP//AAAAAAsAAAAHAAAAAAAAAAwAAAAHAAEAAAAAAA0AAAAHAAIAAAAAAA4AAAAHAAMAAAAAAA8AAAAIAP3/AAAAAAkAAAAIAP7/AAAAAAoAAAAIAP//AAAAAAsAAAAIAAAAAAAAAAwAAAAIAAEAAAAAAA0AAAAIAAIAAAAAAA4AAAAIAAMAAAAAAA8AAAAJAP3/AAAAAAkAAAAJAP7/AAAAAAoAAAAJAP//AAAAAAsAAAAJAAAAAAAAAAwAAAAJAAEAAAAAAA0AAAAJAAIAAAAAAA4AAAAJAAMAAAAAAA8AAAD///3/AAAAAAkAAAD///7/AAAAAAoAAAD/////AAAAAAsAAAD//wAAAAAAAAwAAAD//wEAAAAAAA0AAAD//wIAAAAAAA4AAAD//wMAAAAAAA8AAAA=")
tile_set = ExtResource("4_3f7m4")
script = ExtResource("5_6tl50")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 235)
scale = Vector2(9, 9)
tile_map_data = PackedByteArray("AAD7/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAD6/wAAAAAAAAAAAAD5/wAAAAAAAAAAAAD4/wAAAAAAAAAAAAA=")
tile_set = ExtResource("4_3f7m4")
script = ExtResource("5_6tl50")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(598, 128)
scale = Vector2(9, 9)
sprite_frames = ExtResource("3_3shxk")
animation = &"run"
autoplay = "run"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.0
offset_top = 89.0
offset_right = 297.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../LevelSelectButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../LevelSelectButton")
focus_next = NodePath("../LevelSelectButton")
focus_previous = NodePath("../LevelSelectButton")
theme_override_font_sizes/font_size = 64
text = "PLAY"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
theme_override_font_sizes/font_size = 64
text = "LEVEL SELECT"

[node name="MuteButton" parent="." instance=ExtResource("3_vu5tu")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_right = 0.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="Reset" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
icon = SubResource("AtlasTexture_t6bnd")
flat = true
expand_icon = true

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
